# PathTraceX

./: CMakeLists.txt  README.md  app.h  pch.hpp  scene.cpp  sphere.cpp  sphere.h  window.cpp  window.h
cmake/: deps.cmake  imgui.cmake
imgui/: imgui_impl_wisdom.cpp
path_trace/: CMakeLists.txt  app.cpp  app.h  camera.h  consts.h  entry_main.cpp  graphics.cpp  graphics.h  scene.cpp  scene.h  sphere.cpp  sphere.h  window.cpp  window.h
path_trace/imgui/: imgui_impl_wisdom.h
path_trace/shaders/: filter.ps.hlsl  filter.vs.hlsl  functions.hlsli  hit.lib.hlsl  imgui.ps.hlsl  imgui.vs.hlsl  pathtrace.lib.hlsl  shared.hlsli
